Update and rename operon_build.yml to operon_build_py37.yml

--- a/.github/workflows/operon_build_py37.yml
+++ b/.github/workflows/operon_build_py37.yml
@@ -37,7 +37,7 @@ jobs:
           yum install ceres-solver fmt doctest-devel -y
           echo "Cloning & Building the operon"
           git clone https://github.com/heal-research/operon.git
-          mv environment.yml operon
+          mv build_operon/py37.yml operon
           cd operon
           
           # create and activate conda environment
