--- a/.github/workflows/operon_build_py37.yml
+++ b/.github/workflows/operon_build_py37.yml
@@ -1,9 +1,9 @@
-name: operon
+name: zbuild_operon
 
 on:
   push:
     branches:
-      - main
+      - zbuild_operon
 
 jobs:
   build:
@@ -17,10 +17,6 @@ jobs:
         run: |
           echo "Install dependencies"
           yum install libXcomposite libXcursor libXi libXtst libXrandr alsa-lib mesa-libEGL libXdamage mesa-libGL libXScrnSaver centos-release-scl ca-certificates wget epel-release g++ gcc-c++ git python3 -y
-          echo "Install miniconda"
-          wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh
-          bash ~/miniconda.sh -b -p $HOME/miniconda
-          eval "$($HOME/miniconda/bin/conda shell.bash hook)"
           
           echo "Install GCC"
           yum install devtoolset-9 -y
@@ -32,7 +28,24 @@ jobs:
           curl -fsSLO --compressed https://cmake.org/files/v3.12/cmake-${CMAKE_VERSION}-SHA-256.txt.asc
           curl -fsSLO --compressed https://cmake.org/files/v3.12/cmake-${CMAKE_VERSION}-SHA-256.txt
           tar xzf cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz -C /usr/local --strip-components=1 --no-same-owner
+
+
+
+          echo "Install miniconda"
+          wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh
+          bash ~/miniconda.sh -b -p $HOME/miniconda
+          eval "$($HOME/miniconda/bin/conda shell.bash hook)"
           
+          echo "create and activate conda environment" 
+          conda env create -f build_operon/py37.yml
+          conda activate operon-env
+          
+          echo "Conda Pack"
+          conda install -y conda-pack          
+          
+          
+
+
           echo "Install required dependencies for operon"
           yum install ceres-solver fmt doctest-devel -y
           echo "Cloning & Building the operon"
@@ -40,10 +53,9 @@ jobs:
           mv build_operon/py37.yml operon
           cd operon
           
-          # create and activate conda environment
-          conda env create -f environment.yml
-          conda activate operon-env
+
           
+          #### Build  ##############################
           export CC=gcc
           export CXX=gcc
           
@@ -52,10 +64,15 @@ jobs:
           cmake .. -DCMAKE_BUILD_TYPE=Release  -DBUILD_PYBIND=ON -DUSE_OPENLIBM=ON -DUSE_SINGLE_PRECISION=ON -DCERES_TINY_SOLVER=ON
           make VERBOSE=1 -j pyoperon
           make install
+          
+          
+          ### Pack the install env
+          conda pack -n operon-env  -o conda_operon_env.tar.gz
+          
  
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v2
         with:
-          name: operon-artifact
-          path: '~/miniconda'
-          retention-days: 60
+          name: conda-operon-env
+          path: 'conda_operon_env.tar.gz'
+          retention-days: 120
