Update and rename operon_build_py37.yml to build_operon_py37.yml

--- a/.github/workflows/build_operon_py37.yml
+++ b/.github/workflows/build_operon_py37.yml
@@ -1,9 +1,9 @@
-name: zbuild_operon
+name: zbuild_pecos
 
 on:
   push:
     branches:
-      - zbuild_operon
+      - zbuild_pecos
 
 jobs:
   build:
