--- a/.github/workflows/build_operon_py37.yml
+++ b/.github/workflows/build_operon_py37.yml
@@ -3,7 +3,7 @@ name: zbuild_operon
 on:
   push:
     branches:
-      - zbuild_operon
+      - zbuild_operon_aki
 
 jobs:
   build:
@@ -16,24 +16,11 @@ jobs:
       - name: Setup
         run: |
           echo "Install dependencies"
-          yum install libXcomposite libXcursor libXi libXtst libXrandr alsa-lib mesa-libEGL libXdamage mesa-libGL libXScrnSaver centos-release-scl ca-certificates wget epel-release g++ gcc-c++ git python3 -y
-          
-          echo "Install GCC"
-          yum install devtoolset-9 -y
-          source /opt/rh/devtoolset-9/enable
-          
-          echo "Install CMake"
-          export CMAKE_VERSION=3.12.4
-          curl -fsSLO --compressed https://cmake.org/files/v3.12/cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz
-          curl -fsSLO --compressed https://cmake.org/files/v3.12/cmake-${CMAKE_VERSION}-SHA-256.txt.asc
-          curl -fsSLO --compressed https://cmake.org/files/v3.12/cmake-${CMAKE_VERSION}-SHA-256.txt
-          tar xzf cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz -C /usr/local --strip-components=1 --no-same-owner
-
-
+          yum -y install curl bzip2 
 
           echo "Install miniconda"
-          wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh
-          bash ~/miniconda.sh -b -p $HOME/miniconda
+          curl -sSL https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -o /tmp/miniconda.sh
+          bash /tmp/miniconda.sh -b -p $HOME/miniconda
           eval "$($HOME/miniconda/bin/conda shell.bash hook)"
           
           echo "create and activate conda environment" 
@@ -42,10 +29,7 @@ jobs:
           
           echo "Conda Pack"
           conda install -y conda-pack          
-          
-          
-          echo "Install required dependencies for operon"
-          yum install ceres-solver fmt doctest-devel -y
+                    
           echo "Cloning & Building the operon"
           git clone https://github.com/heal-research/operon.git
           mv build_operon/py37.yml operon
@@ -57,18 +41,18 @@ jobs:
           
           
           #### Build  ##############################
-          # Use gcc-9 (or later)
-          export CC=gcc
-          export CXX=gcc
-          
           which gcc 
           which cmake
-          
-          
+                    
           # run cmake with options
           mkdir build; cd build;
-          cmake .. -DCMAKE_BUILD_TYPE=Release  -DBUILD_PYBIND=ON -DUSE_OPENLIBM=ON -DUSE_SINGLE_PRECISION=ON -DCERES_TINY_SOLVER=ON
-          make VERBOSE=1 -j pyoperon
+          cmake .. \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DBUILD_PYBIND=ON \
+            -DUSE_OPENLIBM=ON \
+            -DUSE_SINGLE_PRECISION=ON \
+            -DCERES_TINY_SOLVER=ON
+          make VERBOSE=1 pyoperon
           make install
           
           #### Check
