--- a/build_operon/py37.yml
+++ b/build_operon/py37.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
 dependencies:
   - python=3.7.1
-  - cmake=3.19.1
+  - cmake=3.21.3
   - pybind11=2.6.1
   - eigen=3.4.0
   - fmt=7.1.3
@@ -11,3 +11,6 @@ dependencies:
   - taskflow=3.1.0
   - openlibm
   - cxxopts
+  - gxx
+  - libstdcxx-ng
+  - gflags
