--- a/.github/workflows/build_operon_py37.yml
+++ b/.github/workflows/build_operon_py37.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup
         run: |
           echo "Install dependencies"
-          yum -y install curl bzip2 git
+          yum -y install curl bzip2 git which
 
           echo "Install miniconda"
           curl -sSL https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -o /tmp/miniconda.sh
