--- a/build_operon/py37.yml
+++ b/build_operon/py37.yml
@@ -11,7 +11,7 @@ dependencies:
   - taskflow=3.1.0
   - openlibm
   - cxxopts
-  - gxx
-  - libstdcxx-ng
-  - gflags
-  - make
+  - gxx==11.2.0
+  - libstdcxx-ng==11.2.0
+  - gflags==2.2.2
+  - make==4.3
