--- a/.github/workflows/build_operon_py37.yml
+++ b/.github/workflows/build_operon_py37.yml
@@ -40,8 +40,8 @@ jobs:
           # git checkout fa729cf99e4a3ccbbf6886a370f646bac7fc734f
 
           # Apply patch before build
-          patch -p1 < ../CMakeLists.txt.patch
-          # patch -p1 < ../no-avx2-no-fma.patch  # if CPU does not have AVX2 or FMA
+          patch -p1 < ../build_operon/CMakeLists.txt.patch
+          # patch -p1 < ../build_operon/no-avx2-no-fma.patch  # if CPU does not have AVX2 or FMA
           
           
           #### Build  ##############################
