--- a/.github/workflows/build_operon_py37.yml
+++ b/.github/workflows/build_operon_py37.yml
@@ -24,7 +24,7 @@ jobs:
           eval "$($HOME/miniconda/bin/conda shell.bash hook)"
           
           echo "create and activate conda environment" 
-          conda env create -f build_operon/py37.yml
+          conda create -n operon-env python=3.7
           conda activate operon-env          
           
           ### Oct 7 version : working  https://github.com/heal-research/operon/commits/          
