--- a/.github/workflows/build_operon.yml
+++ b/.github/workflows/build_operon.yml
@@ -37,6 +37,6 @@ jobs:
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v2
         with:
-          name: conda-operon-env
-          path: 'conda_operon_env.tar.gz'
+          name: upload files
+          path: /github/home/miniconda/envs/operon-env/conda-bld/linux-64/operon-*-py37*.tar.bz2
           retention-days: 120
