--- a/.github/workflows/build_operon.yml
+++ b/.github/workflows/build_operon.yml
@@ -38,5 +38,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: upload files
-          path: /github/home/miniconda/envs/operon-env/conda-bld/linux-64/operon-*-py37*.tar.bz2
+          path: /github/home/miniconda/envs/operon-env/conda-bld/linux-64/operon-*-py*.tar.bz2
           retention-days: 120
