--- a/build_operon/recipe/meta.yaml
+++ b/build_operon/recipe/meta.yaml
@@ -40,6 +40,7 @@ requirements:
   run:
     - python {{ python }}
     - openlibm
+    - numpy
     - scikit-learn
 
 test:
@@ -61,6 +62,7 @@ test:
     - test -f ${SP_DIR}/operon/_operon.cpython-*-x86_64-linux-gnu.so
     - test -f ${SP_DIR}/operon/__init__.py
     - test -f ${SP_DIR}/operon/sklearn.py
+    - python -c "import numpy as np;from operon.sklearn import SymbolicRegressor;X= np.array([[0,1]]);y= [0.5];reg = SymbolicRegressor();reg.fit(X, y);"
   imports:
     - operon
 
