--- a/build_operon/recipe/meta.yaml
+++ b/build_operon/recipe/meta.yaml
@@ -7,6 +7,7 @@ package:
 
 source:
   git_url: https://github.com/heal-research/operon
+  git_rev: {{ git_rev }}
   patches:
     - CMakeLists.txt.patch
 #    - no-avx2-no-fma.patch
