--- a/build_hnsw/recipe/meta.yaml
+++ b/build_hnsw/recipe/meta.yaml
@@ -6,13 +6,16 @@ package:
   version: {{ version }}
 
 source:
-  git_url: https://github.com/arita37/cat_hnswlib/tree/master/python_bindings
+  git_url:  https://github.com/arita37/cat_hnswlib.git
 
 build:
   number: 0
   script: |
-    python -m pip install . -vv
-
+    cd python_bindings
+    pip install -r requirements.txt
+    # python setup.py install
+    python -m pip install . -vv    
+    
 requirements:
   build:
     - make
@@ -21,27 +24,15 @@ requirements:
     - gxx={{ gxx }}
     - numpy>=1.19.5
     - blas
-    - sphinx_rtd_theme
     - pytest-runner
-    - scipy
-    - scikit-learn
-    - pytorch
-    - click
-    - transformers
-    - sentencepiece
     - libgomp
+    -numpy>=1.10.0
+    -pybind11>=2.0
+
   run:
     - python={{ python }}
     - libstdcxx-ng
     - numpy>=1.19.5
-    - blas
-    - sphinx_rtd_theme
-    - scipy
-    - scikit-learn
-    - pytorch
-    - click
-    - transformers
-    - sentencepiece
 
 test:
   imports:
