--- a/build_hnsw/recipe/meta.yaml
+++ b/build_hnsw/recipe/meta.yaml
@@ -12,22 +12,22 @@ build:
   number: 0
   script: |
     cd python_bindings
-    pip install -r requirements.txt
+    # pip install -r requirements.txt
     # python setup.py install
     python -m pip install . -vv    
     
 requirements:
   build:
     - make
-    - pip
+    #- pip
     - cmake
     - python={{ python }}
     - gxx={{ gxx }}
     #- numpy<=1.19.5
     - numpy<1.17.0
-    - blas
-    - pytest-runner
-    - libgomp
+    #- blas
+    #- pytest-runner
+    #- libgomp
     - pybind11>=2.0
 
   run:
