--- a/build_hnsw/recipe/meta.yaml
+++ b/build_hnsw/recipe/meta.yaml
@@ -6,7 +6,8 @@ package:
   version: {{ version }}
 
 source:
-  git_url:  https://github.com/arita37/cat_hnswlib.git
+  # git_url: https://github.com/arita37/cat_hnswlib.git
+  git_url: https://github.com/nmslib/hnswlib.git
 
 build:
   number: 0
