--- a/build_hnsw/recipe/meta.yaml
+++ b/build_hnsw/recipe/meta.yaml
@@ -9,6 +9,10 @@ source:
   # git_url: https://github.com/arita37/cat_hnswlib.git
   git_url: https://github.com/nmslib/hnswlib.git
 
+#source:
+#  git_url: https://github.com/heal-research/operon
+#  git_rev: 14cabd0bda9fdc5b513eb8901947dcd409cb66d8
+
 build:
   number: 0
   script: |
