--- a/build_hnsw/recipe/meta.yaml
+++ b/build_hnsw/recipe/meta.yaml
@@ -28,8 +28,8 @@ requirements:
     - cmake
     - python={{ python }}
     - gxx={{ gxx }}
-    #- numpy<=1.19.5
-    - numpy<1.17.0
+    - numpy==1.19.2
+    #- numpy<1.17.0
     #- blas
     #- pytest-runner
     #- libgomp
@@ -39,7 +39,7 @@ requirements:
     - python={{ python }}
     - libstdcxx-ng
     #- numpy>=1.19.5
-    - numpy<1.17.0
+    - numpy==1.19.2
 
 test:
   imports:
